# video-downloader

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: set-version.mjs
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
